// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CallListItem renders Declined without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-hcwdiu"
    >
      <div
        class="rcx-item rcx-item--extended rcx-item--inset-md"
      >
        <div
          class="rcx-item__content"
        >
          <div
            class="rcx-item__row"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-1g87xs3"
            >
              ❲
            </i>
            <div
              class="rcx-item__title"
            >
              <a
                class="rcx-item__link"
                href="/conference/refused"
              >
                Design review
              </a>
            </div>
            <div
              class="rcx-item__meta"
            >
              10:00 AM
            </div>
          </div>
          <div
            class="rcx-item__description"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1p4sjp4"
            >
              3 people joined
            </div>
          </div>
        </div>
        <div
          class="rcx-item__actions"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-1p4sjp4"
          >
            (
            Declined
            )
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CallListItem renders Joinable without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-hcwdiu"
    >
      <div
        class="rcx-item rcx-item--extended rcx-item--inset-md"
      >
        <div
          class="rcx-item__content"
        >
          <div
            class="rcx-item__row"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-1g87xs3"
            >
              ❲
            </i>
            <div
              class="rcx-item__title"
            >
              <a
                class="rcx-item__link"
                href="/conference/standup"
              >
                Daily standup
              </a>
            </div>
            <div
              class="rcx-item__meta"
            >
              10:00 AM
            </div>
          </div>
          <div
            class="rcx-item__description"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1p4sjp4"
            >
              4 people joined
            </div>
          </div>
        </div>
        <div
          class="rcx-item__actions"
        >
          <button
            aria-label="Decline"
            class="rcx-box rcx-box--full rcx-button--mini-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button"
            title="Decline"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-1tg7yd0"
            >
              
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CallListItem renders Joined without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-hcwdiu"
    >
      <div
        class="rcx-item rcx-item--extended rcx-item--inset-md"
      >
        <div
          class="rcx-item__content"
        >
          <div
            class="rcx-item__row"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-1g87xs3"
            >
              ❲
            </i>
            <div
              class="rcx-item__title"
            >
              <a
                class="rcx-item__link"
                href="/conference/joined"
              >
                Pairing session
              </a>
            </div>
            <div
              class="rcx-item__meta"
            >
              10:00 AM
            </div>
          </div>
          <div
            class="rcx-item__description"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1p4sjp4"
            >
              2 people joined
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CallListItem renders Ringing without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-hcwdiu"
    >
      <div
        class="rcx-item rcx-item--extended rcx-item--inset-md"
      >
        <div
          class="rcx-item__content"
        >
          <div
            class="rcx-item__row"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-1g87xs3"
            >
              ❲
            </i>
            <div
              class="rcx-item__title"
            >
              <a
                class="rcx-item__link"
                href="/conference/ringing"
              >
                Ada Lovelace
              </a>
            </div>
            <div
              class="rcx-item__meta"
            >
              <span
                class="rcx-box rcx-box--full rcx-css-18wfy10"
              >
                Ringing
                …
              </span>
            </div>
          </div>
          <div
            class="rcx-item__description"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1p4sjp4"
            >
              1 person joined
            </div>
          </div>
        </div>
        <div
          class="rcx-item__actions"
        >
          <button
            aria-label="Silence"
            class="rcx-box rcx-box--full rcx-button--mini-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button"
            title="Silence"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-bell-off rcx-icon rcx-css-1tg7yd0"
            >
              
            </i>
          </button>
          <button
            aria-label="Decline"
            class="rcx-box rcx-box--full rcx-button--mini-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button"
            title="Decline"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-1tg7yd0"
            >
              
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CallListItem renders RingingButDeclined without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-hcwdiu"
    >
      <div
        class="rcx-item rcx-item--extended rcx-item--inset-md"
      >
        <div
          class="rcx-item__content"
        >
          <div
            class="rcx-item__row"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-1g87xs3"
            >
              ❲
            </i>
            <div
              class="rcx-item__title"
            >
              <a
                class="rcx-item__link"
                href="/conference/refused"
              >
                Design review
              </a>
            </div>
            <div
              class="rcx-item__meta"
            >
              10:00 AM
            </div>
          </div>
          <div
            class="rcx-item__description"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1p4sjp4"
            >
              2 people joined
            </div>
          </div>
        </div>
        <div
          class="rcx-item__actions"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-1p4sjp4"
          >
            (
            Declined
            )
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CallListItem renders RingingButJoined without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-hcwdiu"
    >
      <div
        class="rcx-item rcx-item--extended rcx-item--inset-md"
      >
        <div
          class="rcx-item__content"
        >
          <div
            class="rcx-item__row"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-1g87xs3"
            >
              ❲
            </i>
            <div
              class="rcx-item__title"
            >
              <a
                class="rcx-item__link"
                href="/conference/answered"
              >
                Standup
              </a>
            </div>
            <div
              class="rcx-item__meta"
            >
              10:00 AM
            </div>
          </div>
          <div
            class="rcx-item__description"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1p4sjp4"
            >
              2 people joined
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CallListItem renders RingingNotHeardHere without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-hcwdiu"
    >
      <div
        class="rcx-item rcx-item--extended rcx-item--inset-md"
      >
        <div
          class="rcx-item__content"
        >
          <div
            class="rcx-item__row"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-1g87xs3"
            >
              ❲
            </i>
            <div
              class="rcx-item__title"
            >
              <a
                class="rcx-item__link"
                href="/conference/ringing"
              >
                Ada Lovelace
              </a>
            </div>
            <div
              class="rcx-item__meta"
            >
              <span
                class="rcx-box rcx-box--full rcx-css-18wfy10"
              >
                Ringing
                …
              </span>
            </div>
          </div>
          <div
            class="rcx-item__description"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1p4sjp4"
            >
              1 person joined
            </div>
          </div>
        </div>
        <div
          class="rcx-item__actions"
        >
          <button
            aria-label="Decline"
            class="rcx-box rcx-box--full rcx-button--mini-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button"
            title="Decline"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-1tg7yd0"
            >
              
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CallListItem renders RingingSilenced without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-hcwdiu"
    >
      <div
        class="rcx-item rcx-item--extended rcx-item--inset-md"
      >
        <div
          class="rcx-item__content"
        >
          <div
            class="rcx-item__row"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-1g87xs3"
            >
              ❲
            </i>
            <div
              class="rcx-item__title"
            >
              <a
                class="rcx-item__link"
                href="/conference/ringing"
              >
                Ada Lovelace
              </a>
            </div>
            <div
              class="rcx-item__meta"
            >
              <span
                class="rcx-box rcx-box--full rcx-css-18wfy10"
              >
                Ringing
                …
              </span>
            </div>
          </div>
          <div
            class="rcx-item__description"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1p4sjp4"
            >
              1 person joined
            </div>
          </div>
        </div>
        <div
          class="rcx-item__actions"
        >
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-bell-off rcx-icon rcx-css-z80ug6"
            title="Incoming call, silenced"
          >
            
          </i>
          <button
            aria-label="Decline"
            class="rcx-box rcx-box--full rcx-button--mini-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button"
            title="Decline"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-1tg7yd0"
            >
              
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CallListItem renders SinglePerson without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-hcwdiu"
    >
      <div
        class="rcx-item rcx-item--extended rcx-item--inset-md"
      >
        <div
          class="rcx-item__content"
        >
          <div
            class="rcx-item__row"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-1g87xs3"
            >
              ❲
            </i>
            <div
              class="rcx-item__title"
            >
              <a
                class="rcx-item__link"
                href="/conference/alone"
              >
                Ada Lovelace
              </a>
            </div>
            <div
              class="rcx-item__meta"
            >
              10:00 AM
            </div>
          </div>
          <div
            class="rcx-item__description"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1p4sjp4"
            >
              1 person joined
            </div>
          </div>
        </div>
        <div
          class="rcx-item__actions"
        >
          <button
            aria-label="Decline"
            class="rcx-box rcx-box--full rcx-button--mini-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button"
            title="Decline"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-1tg7yd0"
            >
              
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
